--- a/src/classes/PerformCadenceActionBatchService.cls
+++ b/src/classes/PerformCadenceActionBatchService.cls
@@ -1,7 +1,6 @@
 public class PerformCadenceActionBatchService {
     
-    public static void runSequenceEngine(string participantType, List<string> participantTypeAndParentGroupsList, List<SObject> participantList)
-    {
-    	SequenceEngine.processSequences(participantType, participantTypeAndParentGroupsList, participantList, false);
+    public static void runSequenceEngine(string participantType, List<SObject> participantList) {	
+    	SequenceEngine.processSequences(participantType, participantList, false);
     }
 }
