--- a/src/classes/PerformOpportunityActionBatch.cls
+++ b/src/classes/PerformOpportunityActionBatch.cls
@@ -1,24 +1,15 @@
 public class PerformOpportunityActionBatch implements Database.Batchable<sObject>, Database.stateful, Database.AllowsCallouts {
 
-	public String objType;
-	public String parentObj;
-	public list<string> listOfobjecttype;
-
-	public PerformOpportunityActionBatch(List<String> listOfObjTypeAndParent) { 
-		this.listOfobjecttype = listOfObjTypeAndParent; 
-		if(listOfObjTypeAndParent != null && listOfObjTypeAndParent.size() > 0) {
-			this.objType=listOfObjTypeAndParent[0];
-		}
-	}
+	public PerformOpportunityActionBatch() {  
+	} 
 
 	public Database.QueryLocator start(Database.BatchableContext bc) {
-		String query = PerformCadenceActionBatchHelper.formQuery(listOfobjecttype) ;
+		String query = PerformCadenceActionBatchHelper.formQuery(CadenceConstants.OPPORTUNITY_OBJECT_NAME) ;
 		return Database.getQueryLocator(query);
-	}
-
-	public void execute(Database.BatchableContext bc, List<sObject> objList) {
-		Map<Id, SObject> parentMap = new Map<Id, SObject>();
-		PerformCadenceActionBatchService.runSequenceEngine(objType, listOfobjecttype, objList);
+	} 
+ 
+	public void execute(Database.BatchableContext bc, List<SObject> participantList) {
+		PerformCadenceActionBatchService.runSequenceEngine(CadenceConstants.OPPORTUNITY_OBJECT_NAME, participantList);
 	}
 
 	public void finish(Database.BatchableContext bc) {
