--- a/src/classes/PerformLeadActionBatch.cls
+++ b/src/classes/PerformLeadActionBatch.cls
@@ -1,24 +1,15 @@
 public class PerformLeadActionBatch implements Database.Batchable<sObject>, Database.stateful, Database.AllowsCallouts {
 
-	public String objType;
-	public String parentObj;
-	public list<string> listOfobjecttype;
-
-	public PerformLeadActionBatch(List<String> listOfObjTypeAndParent) { 
-		this.listOfobjecttype = listOfObjTypeAndParent; 
-		if(listOfObjTypeAndParent != null && listOfObjTypeAndParent.size() > 0) {
-			this.objType=listOfObjTypeAndParent[0];
-		}
+	public PerformLeadActionBatch() {  
 	}
-
+ 
 	public Database.QueryLocator start(Database.BatchableContext bc) {
-		String query = PerformCadenceActionBatchHelper.formQuery(listOfobjecttype) ;
+		String query = PerformCadenceActionBatchHelper.formQuery(CadenceConstants.LEAD_OBJECT_NAME) ;
 		return Database.getQueryLocator(query);
-	}
-
-	public void execute(Database.BatchableContext bc, List<sObject> objList) {
-		Map<Id, SObject> parentMap = new Map<Id, SObject>();
-		PerformCadenceActionBatchService.runSequenceEngine(objType, listOfobjecttype, objList);
+	} 
+ 
+	public void execute(Database.BatchableContext bc, List<SObject> participantList) {
+		PerformCadenceActionBatchService.runSequenceEngine(CadenceConstants.LEAD_OBJECT_NAME, participantList);
 	}
 
 	public void finish(Database.BatchableContext bc) {
