--- a/src/classes/LeadServiceTest.cls
+++ b/src/classes/LeadServiceTest.cls
@@ -1,69 +1,23 @@
 @isTest
 public class LeadServiceTest {
     
-    /*static testMethod void getParticipantIdToParentRecordMapTest() {
+    static testMethod void getSequenceHistoryTest() {
     	Action__c actionRec = TestDataFactory.createAction(CadenceConstants.ACTION_TYPE_CALL);
-		List<Sequence_Action__c> seqActRec = new List<Sequence_Action__c>();
 		insert actionRec;
-		List<SObject> participantList = new List<SObject>();
 		Cadence__c seqRec = TestDataFactory.createCadence(CadenceConstants.LEAD_OBJECT_NAME);
 		insert seqRec;
 		CadenceAction__C seqActionRec = TestDataFactory.createCadenceAction(seqRec.Id, actionRec.Id);
 		insert seqActionRec;
-		Lead leadRec = TestDataFactory.createLead();
+		Lead leadRec = TestDataFactory.createLead(seqRec.Id);
 		insert leadRec; 
-		participantList.add(leadRec);
 		Sequence_Action__c participantAction = TestDataFactory.createParticipantAction(leadRec.Id, seqActionRec.Id, CadenceConstants.LEAD_OBJECT_NAME);
 		insert participantAction;
 		
 		Test.startTest();
-    	new LeadService().getParticipantIdToParentRecordMap(participantList);
+    	Map<Id, Set<Id>> leadIdToSequenceActionsIdSetMap = new LeadService().getSequenceHistory();
     	Test.stopTest();
+    	system.assertEquals(leadIdToSequenceActionsIdSetMap.size(),1);
     }
-    
-    static testMethod void getActiveSequencesTest() {
-    	Account accountRec = TestDataFactory.createAccount();
-		insert accountRec;
-		Action__c actionRec = TestDataFactory.createAction(CadenceConstants.ACTION_TYPE_CALL);
-		insert actionRec;
-		List<SObject> participantList = new List<SObject>();
-		Cadence__c seqRec = TestDataFactory.createCadence(CadenceConstants.CONTACT_OBJECT_NAME);
-		seqRec.Status__c = false;
-		insert seqRec;
-		CadenceAction__C seqActionRec = TestDataFactory.createCadenceAction(seqRec.Id, actionRec.Id);
-		insert seqActionRec;
-		Contact contRec = TestDataFactory.createContact(accountRec.Id, seqRec.Id);
-		insert contRec; 
-		participantList.add(contRec);
-		Sequence_Action__c participantAction = TestDataFactory.createParticipantAction(contRec.Id, seqActionRec.Id,CadenceConstants.CONTACT_OBJECT_NAME);
-		insert participantAction;
-		
-		Account accountRec1 = TestDataFactory.createAccount();
-		insert accountRec1;
-		Action__c actionRec1 = TestDataFactory.createAction(CadenceConstants.ACTION_TYPE_EMAIL);
-		insert actionRec1;
-		Cadence__c seqRec1 = TestDataFactory.createCadence(CadenceConstants.CONTACT_OBJECT_NAME);
-		seqRec1.Name = 'Sequence Rec';
-		insert seqRec1;
-		CadenceAction__C seqActionRec1 = TestDataFactory.createCadenceAction(seqRec1.Id, actionRec1.Id);
-		insert seqActionRec1;
-		Contact contRec1 = TestDataFactory.createContact(accountRec1.Id, seqRec1.Id);
-		insert contRec1; 
-		
-		participantList.add(contRec1);
-		Sequence_Action__c participantAction1 = TestDataFactory.createParticipantAction(contRec1.Id, seqActionRec1.Id,CadenceConstants.CONTACT_OBJECT_NAME);
-		insert participantAction1;
-		
-		Test.startTest();
-    	Map<Id, Cadence__c> activeSequenceIdToSequenceMap = new LeadService().getActiveSequences(CadenceConstants.CONTACT_OBJECT_NAME, participantList );
-    	Test.stopTest();
-    	List<Cadence__c> seqList = new List<Cadence__c>();
-    	for(Id seqId :  activeSequenceIdToSequenceMap.keySet()) {
-    		Cadence__c sequenceRec = activeSequenceIdToSequenceMap.get(seqId);
-    		seqList.add(sequenceRec);
-    	}
-    	system.assertEquals(seqList[0].Name,'Sequence Rec');
-    }*/
     
     static testMethod void unAssociateParticipantsTest() {
     	Action__c actionRec = TestDataFactory.createAction(CadenceConstants.ACTION_TYPE_CALL);
@@ -85,60 +39,124 @@ public class LeadServiceTest {
     	system.assertEquals(unAssociateLeadList[0].isActivated__c, false);
     }
     
-    static testMethod void associateParticipantTest() {
+    static testMethod void checkExitCriteriaTest() {
+    	Map<Id, Cadence__c> sequenceIdToSequenceMap = new Map<Id, Cadence__c>();
+    	List<SObject> participantList = new List<SObject>();
+    	
     	Action__c actionRec = TestDataFactory.createAction(CadenceConstants.ACTION_TYPE_CALL);
 		List<Sequence_Action__c> seqActRec = new List<Sequence_Action__c>();
 		insert actionRec;
-		Map<Id, List<SObject>> sequenceIdToParticipantListMap = new Map<Id, List<SObject>>();
-		Map<Id, Set<Id>> participantIdToSequenceIdSetMap = new Map<Id, Set<Id>>();
-		List<SObject> participantList = new List<SObject>();
-		List<Cadence__c> seqRecList = new List<Cadence__c>();
-		List<CadenceAction__C> seqActionRecList = new List<CadenceAction__C>();
-		Set<Id> sequenceIdSet = new Set<Id>();
-		for(Integer i=0; i<5; i++) {
-			Cadence__c seqRec = new Cadence__c();
-			seqRec.Name = 'Test Cadence' + i;
-			seqRec.Record_Type__c = CadenceConstants.LEAD_OBJECT_NAME;
-			seqRec.Status__c = true;
-			seqRec.Participent_Activation__c = 'Automatic'; 
-			seqRecList.add(seqRec);
-			sequenceIdSet.add(seqRec.Id);
-		}
 		
-		insert seqRecList;
+		Cadence__c seqRec = TestDataFactory.createCadence(CadenceConstants.LEAD_OBJECT_NAME);
+		insert seqRec;
+		CadenceAction__C seqActionRec = TestDataFactory.createCadenceAction(seqRec.Id, actionRec.Id);
+		insert seqActionRec;
+		Lead leadRec = TestDataFactory.createLead(seqRec.Id);
+		insert leadRec; 
+		participantList.add(leadRec);
 		
-		for(Integer i=0; i<5; i++) {
-			CadenceAction__C seqActionRec = new CadenceAction__C();
-			seqActionRec.Cadence_Id__c = seqRecList[i].Id;
-			seqActionRec.Action_Id__c = actionRec.Id;
-			seqActionRec.Name = 'Test Cadence Action' + i;
-			seqActionRec.Trigger_Type__c = 'Immediate';
-			seqActionRecList.add(seqActionRec);
-		}
+		Action__c actionRec1 = TestDataFactory.createAction(CadenceConstants.ACTION_TYPE_CALL);
+		insert actionRec1;
+		Cadence__c seqRec1 = TestDataFactory.createCadence(CadenceConstants.LEAD_OBJECT_NAME);
+		seqRec1.Name = 'Cadence New 1';
+ 		insert seqRec1;
+		CadenceAction__C seqActionRec1 = TestDataFactory.createCadenceAction(seqRec1.Id, actionRec1.Id);
+		insert seqActionRec1;
+		Lead leadRec1 = TestDataFactory.createLead(seqRec1.Id);
+		leadRec1.LastName = 'Lead New 1';
+		leadRec1.Company = 'Company New 1';
+		insert leadRec1; 
+		Sequence_Action__c participantAction1 = TestDataFactory.createParticipantAction(leadRec1.Id, seqActionRec1.Id, CadenceConstants.LEAD_OBJECT_NAME);
+		insert participantAction1;
+		participantList.add(leadRec1);
 		
-		insert seqActionRecList;
-		
-		for(Integer i=0; i<5; i++) {
-			Lead leadRec = new Lead();
-			leadRec.LastName = 'Test Lead' + i;
-			leadRec.Company = 'Test Company' + i;
-			leadRec.Cadence_Id__c = seqRecList[i].Id;
-			leadRec.Priority__C = i;
-			participantList.add(leadRec);
-		}
-		
-		insert participantList; 
-		
-		for(Cadence__c sequenceRec : seqRecList) {
-			sequenceIdToParticipantListMap.put(sequenceRec.Id, participantList);
-		}
-		
-		for(SObject participantRec : participantList) {
-			participantIdToSequenceIdSetMap.put(participantRec.Id, sequenceIdToParticipantListMap.keySet());
-		}
+		sequenceIdToSequenceMap.put(seqRec.Id, seqRec);
+		sequenceIdToSequenceMap.put(seqRec1.Id, seqRec1);
 		
 		Test.startTest();
-    	List<Lead> unAssociateLeadList = new LeadService().associateParticipant(sequenceIdToParticipantListMap, participantIdToSequenceIdSetMap);
+    	List<Lead> matchedParticipantList = new LeadService().checkExitCriteria(CadenceConstants.LEAD_OBJECT_NAME, participantList,sequenceIdToSequenceMap);
     	Test.stopTest();
+    }
+    
+    static testMethod void associateParticipantTest() {
+    	
+		Map<Id, List<SObject>> sequenceIdToParticipantListMap = new Map<Id, List<SObject>>();
+		List<Cadence__c> seqRecList = new List<Cadence__c>();
+		List<Lead> participantList = new List<Lead>();
+		List<Lead> participantList1 = new List<Lead>();
+		
+    	Action__c actionRec = TestDataFactory.createAction(CadenceConstants.ACTION_TYPE_CALL);
+		insert actionRec;
+		Cadence__c seqRec = TestDataFactory.createCadence(CadenceConstants.LEAD_OBJECT_NAME);
+		insert seqRec;
+		CadenceAction__C seqActionRec = TestDataFactory.createCadenceAction(seqRec.Id, actionRec.Id);
+		insert seqActionRec;
+		Lead leadRec = TestDataFactory.createLead(seqRec.Id);
+		insert leadRec; 
+		Sequence_Action__c participantAction = TestDataFactory.createParticipantAction(leadRec.Id, seqActionRec.Id, CadenceConstants.LEAD_OBJECT_NAME);
+		insert participantAction;
+		
+		Action__c actionRec1 = TestDataFactory.createAction(CadenceConstants.ACTION_TYPE_CALL);
+		insert actionRec1;
+		Cadence__c seqRec1 = TestDataFactory.createCadence(CadenceConstants.LEAD_OBJECT_NAME);
+		seqRec1.Name = 'Cadence New 1';
+		seqRec1.Status__c = false;
+		insert seqRec1;
+		CadenceAction__C seqActionRec1 = TestDataFactory.createCadenceAction(seqRec1.Id, actionRec1.Id);
+		insert seqActionRec1;
+		Lead leadRec1 = TestDataFactory.createLead(seqRec1.Id);
+		leadRec1.LastName = 'Lead New 1';
+		leadRec1.Company = 'Company New 1';
+		insert leadRec1; 
+		Sequence_Action__c participantAction1 = TestDataFactory.createParticipantAction(leadRec1.Id, seqActionRec1.Id, CadenceConstants.LEAD_OBJECT_NAME);
+		insert participantAction1;
+		
+		Action__c actionRec2 = TestDataFactory.createAction(CadenceConstants.ACTION_TYPE_CALL);
+		insert actionRec2;
+		Cadence__c seqRec2 = TestDataFactory.createCadence(CadenceConstants.LEAD_OBJECT_NAME);
+		seqRec2.Name = 'Cadence New 2';
+		seqRec2.Status__c = false;
+		insert seqRec2;
+		CadenceAction__C seqActionRec2 = TestDataFactory.createCadenceAction(seqRec2.Id, actionRec2.Id);
+		insert seqActionRec2;
+		Lead leadRec2 = TestDataFactory.createLead(seqRec2.Id);
+		leadRec2.LastName = 'Lead New 2';
+		leadRec2.Company = 'Company New 2';
+		insert leadRec2; 
+		Sequence_Action__c participantAction2 = TestDataFactory.createParticipantAction(leadRec2.Id, seqActionRec2.Id, CadenceConstants.LEAD_OBJECT_NAME);
+		insert participantAction2;
+		
+		Action__c actionRec3 = TestDataFactory.createAction(CadenceConstants.ACTION_TYPE_CALL);
+		insert actionRec3;
+		Cadence__c seqRec3 = TestDataFactory.createCadence(CadenceConstants.LEAD_OBJECT_NAME);
+		seqRec3.Name = 'Cadence New 3';
+		seqRec3.Status__c = false;
+		insert seqRec3;
+		CadenceAction__C seqActionRec3 = TestDataFactory.createCadenceAction(seqRec3.Id, actionRec3.Id);
+		insert seqActionRec3;
+		Lead leadRec3 = TestDataFactory.createLead(seqRec3.Id);
+		leadRec3.LastName = 'Lead New 3';
+		leadRec3.Company = 'Company New 3';
+		insert leadRec3; 
+		Sequence_Action__c participantAction3 = TestDataFactory.createParticipantAction(leadRec3.Id, seqActionRec3.Id, CadenceConstants.LEAD_OBJECT_NAME);
+		insert participantAction3;
+		
+		participantList.add(leadRec);
+		participantList.add(leadRec1);
+		
+		participantList1.add(leadRec2);
+		participantList1.add(leadRec3);
+		
+		sequenceIdToParticipantListMap.put(seqRec.Id, participantList);
+		sequenceIdToParticipantListMap.put(seqRec2.Id, participantList1);
+		
+		Test.startTest();
+    	List<Lead> associateParticipantList = new LeadService().associateParticipant(sequenceIdToParticipantListMap);
+    	Test.stopTest();
+    	system.assertEquals(associateParticipantList.size(),4);
+    }
+    
+    static testMethod void createParticipantActionsTest() {
+    	
     }
 }
